Upgraded to retrofit 2.0.0
Changed the retrofit version to 2.0.0, started off fixing up the tests
to use the new retrofit api.

--- a/RetrofitTestExample/app/build.gradle
+++ b/RetrofitTestExample/app/build.gradle
@@ -30,11 +30,11 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.0.1'
-    compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
-    compile 'com.squareup.retrofit:converter-jackson:2.0.0-beta2'
-    compile 'com.squareup.okhttp:okhttp:2.5.0'
-    androidTestCompile 'com.squareup.retrofit:retrofit-mock:2.0.0-beta2'
-    androidTestCompile ('com.squareup.okhttp:mockwebserver:2.5.0')
+    compile 'com.squareup.retrofit2:retrofit:2.0.0'
+    compile 'com.squareup.retrofit2:converter-jackson:2.0.0'
+    compile 'com.squareup.okhttp:okhttp:2.7.0'
+    androidTestCompile 'com.squareup.retrofit2:retrofit-mock:2.0.0'
+    androidTestCompile ('com.squareup.okhttp:mockwebserver:2.7.0')
     androidTestCompile 'com.android.support.test:runner:0.4'
     androidTestCompile 'com.android.support.test:rules:0.4'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
